--- a/workshop.tex
+++ b/workshop.tex
@@ -53,13 +53,188 @@
 \section{Introductie}
 % Maak een subsection voor een serie slides met een gedeeld thema
 \section{Programmeeromgeving}
+\section{Opdrachten}
 
 \section{Conclusies}
 
 %----------------------------------------------
 
 \begin{frame}
-\frametitle{Ontmoet de Moeder van de PCs}
+\frametitle{Beperkte Omgevingen}
+
+\begin{itemize}
+\item Allereerste `computers'
+\item Militaire toepassingen
+\item Kamersgrote machines en torenhoge energierekeningen
+\end{itemize}
+
+\end{frame}
+
+%----------------------------------------------
+
+\begin{frame}
+\frametitle{Allereerste `computers'}
+
+\begin{itemize}
+\item Rekentabellen (sin, cos)
+\item Administratie (statistiek, belasting)
+\end{itemize}
+
+\end{frame}
+
+%----------------------------------------------
+
+\begin{frame}
+\frametitle{Rekentabellen}
+
+\begin{figure}
+\includegraphics[width=0.75\linewidth]{images/rekentabellen.jpg}
+\end{figure}
+
+\end{frame}
+
+%----------------------------------------------
+
+\begin{frame}
+\frametitle{Militaire toepassingen}
+
+\begin{itemize}
+\item Artillerie (boog van kogel)
+\item Cryptografie (enigma)
+\item OXO
+\end{itemize}
+
+\end{frame}
+
+%----------------------------------------------
+
+\begin{frame}
+\frametitle{Bombe}
+
+\begin{figure}
+\includegraphics[width=0.75\linewidth]{images/bombe.jpg}
+\end{figure}
+
+\end{frame}
+
+%----------------------------------------------
+
+\begin{frame}
+\frametitle{EDSAC}
+
+\begin{figure}
+\includegraphics[width=0.75\linewidth]{images/edsac.jpg}
+\end{figure}
+
+\end{frame}
+
+%----------------------------------------------
+
+\begin{frame}
+\frametitle{EDSAC I/O}
+
+\begin{figure}
+\includegraphics[width=0.75\linewidth]{images/edsac_crts.jpg}
+\end{figure}
+
+\end{frame}
+
+%----------------------------------------------
+
+\begin{frame}
+\frametitle{OXO}
+
+\begin{figure}
+\includegraphics[width=0.75\linewidth]{images/oxo.jpg}
+\end{figure}
+
+\end{frame}
+
+%----------------------------------------------
+
+% TODO add e.g. OXO, edsac met specs
+
+%----------------------------------------------
+
+\begin{frame}
+\frametitle{Mainframes}
+
+\begin{itemize}
+\item Multi-user omgeving
+\item Batch
+\item Reserveren
+\end{itemize}
+
+\end{frame}
+
+%----------------------------------------------
+
+\begin{frame}
+\frametitle{Mainframes}
+
+\begin{itemize}
+\item Onpraktisch
+\item Heel duur: \$100,000+ / \$1,000,000+
+\item Gebruikersonvriendelijk
+\end{itemize}
+
+\end{frame}
+
+%----------------------------------------------
+
+\begin{frame}
+\frametitle{Mini-mainframes}
+
+\begin{itemize}
+\item Duur, maar niet onbetaalbaar: \$10000+
+\item Acceptabele performance
+\item `Gewone' klanten
+\end{itemize}
+
+\end{frame}
+
+%----------------------------------------------
+
+\begin{frame}
+\frametitle{Moore's law}
+
+\begin{itemize}
+\item Rekenmachines steeds sneller en goedkoper
+\item Hoe goedkoper, des te meer toepassingen
+\end{itemize}
+
+\end{frame}
+
+%----------------------------------------------
+
+\begin{frame}
+\frametitle{Introductie van de Personal Computer}
+
+\begin{itemize}
+\item Mini mainframe
+\item `Goedkoop'
+\item `Gebruikersvriendelijk'
+\end{itemize}
+
+\end{frame}
+
+%----------------------------------------------
+
+\begin{frame}
+\frametitle{Toepassingen van PCs}
+
+\begin{itemize}
+\item Kantoor gerelateerd (administratie, spreadsheets, \dots)
+\item Consumentgericht
+\item (Games)
+\end{itemize}
+
+\end{frame}
+
+%----------------------------------------------
+
+\begin{frame}
+\frametitle{Ontmoet de Succesvolste PC ooit}
 
 \begin{figure}
 \includegraphics[width=0.75\linewidth]{images/desk.jpg}
@@ -110,14 +285,42 @@
 \begin{frame}
 \frametitle{Ter Vergelijking}
 
-\begin{tabular}{|l|l|l|l|l|}
-\hline Model & RAM (KiB) & Geluid & HDD & Prijs \\
-C64 & 64 & AD Synth. & Nee & 595 \\
-Apple ][ & 8-16 & Beeper & Nee & ca. 1200 \\
-IBM PC & 16-640 & Beeper & Ja & tot 5000 \\
-ZX Spec. & 16 & Beeper & Nee & ca. 800 \\ \hline
-NES & 2 & Z80? & Nee & ca. 300 \\ \hline
+\begin{tabular}{|l|l|l|l|}
+\hline Jaar & Model & Prijs toen & Prijs nu \\
+1977 & PET & \$795 & \$3150 \\
+1980 & VIC-20 & \$299.95 & \$874 \\
+1982 & C64 & \$595 & \$1480 \\ \hline
+1977 & Apple ][ & \$1296 & \$5130 \\
+1981 & IBM PC & \$1565 & \$4130 \\
+%IBM PC & 16-640 & Beeper & Ja & \$1565 \\
+%ZX Spec. & 16 & Beeper & Nee & \pound 175 \\ \hline
+1982 & ZX Spec. & \pounds 175 & ??? \\ \hline
+1983 & NES & \$179 & \$433 \\ \hline
 \end{tabular}
+
+%\begin{tabular}{|l|l|l|l|l|}
+%\hline Model & RAM & Geluid & \$ toen & \$ nu \\
+%%C64 & 64K & AD Synth. & \$595 - \$135 & \$595 \\
+%C64 & 64K & AD Synth. & \$595 & \$595 \\
+%Apple ][ & 8-16K & Beeper & \$1296 & \$1296 \\
+%IBM PC & 16K & Beeper & \$1565 & \$1565 \\
+%%IBM PC & 16-640 & Beeper & Ja & \$1565 \\
+%%ZX Spec. & 16 & Beeper & Nee & \pound 175 \\ \hline
+%ZX Spec. & 16K & Beeper & \pounds 175 & \pounds 175 pound \\ \hline
+%NES & 2K & Z80? & \$179 & \$433 \\ \hline
+%\end{tabular}
+
+\end{frame}
+
+%----------------------------------------------
+
+\begin{frame}
+\frametitle{En harddisk opslag?}
+
+\begin{itemize}
+\item Niet nodig
+\item Te duur (+\$500/+\$2000)
+\end{itemize}
 
 \end{frame}
 
@@ -131,8 +334,24 @@ NES & 2 & Z80? & Nee & ca. 300 \\ \hline
 C64 & MOS 6510 & 1 & 8-bit SID & 3 \\
 Apple ][ & MOS 6502 & 1 & 1-bit & 0 \\
 IBM PC & i8086 & 4.04 & 1-bit & 0 \\
-ZX Spec. & Z80 & 2 & 1-bit & 0 \\ \hline
+ZX Spec. & Z80 & 3.5 & 1-bit & 0 \\ \hline
 NES & Ricoh 2A03 & 1 & 8-bit & 5 \\ \hline
+\end{tabular}
+
+\end{frame}
+
+%----------------------------------------------
+
+\begin{frame}
+\frametitle{Ter Vergelijking}
+
+\begin{tabular}{|l|l|l|l|}
+\hline Model & Geluid & Type & Voices \\
+C64 & SID & A/D 8-bit synth. & 3 \\
+Apple ][ & Speaker & 1-bit beeper & 0 \\
+IBM PC & Speaker & 1-bit beepr & 0 \\
+%ZX Spec. & 16K & Beeper & 175 pound & 175 pound \\ \hline
+NES & Z80? & 8-bit digital & 5 \\ \hline
 \end{tabular}
 
 \end{frame}
@@ -147,9 +366,24 @@ NES & Ricoh 2A03 & 1 & 8-bit & 5 \\ \hline
 C64 & VIC II & 16 \\
 Apple ][ & ??? & 1-4 \\
 IBM PC & mono of CGA & 1-4 \\
-ZX Spec. & ??? & 8 \\ \hline
+ZX Spec. & geen (CPU) & 8 \\ \hline
 NES & Ricoh 2C02 PPU & 52 \\ \hline
 \end{tabular}
+
+\end{frame}
+
+%----------------------------------------------
+
+\begin{frame}
+\frametitle{Wat kan een C64?}
+
+\begin{itemize}
+\item Administratie (spreadsheets, word, \dots)
+\item Scannen, printen
+\item Games!
+\item Internet (via 50Kbps modem)
+\item Hardware upgrades
+\end{itemize}
 
 \end{frame}
 
@@ -182,11 +416,12 @@ NES & Ricoh 2C02 PPU & 52 \\ \hline
 %----------------------------------------------
 
 \begin{frame}
-\frametitle{Hoe Programmeerde we vroeger?}
+\frametitle{Hoe Programmeerden we vroeger?}
 
 \begin{itemize}
 \item Geen internet
 \item Literatuur (tijdschriften, boeken, \dots)
+\item Overlevering (bijeenkomsten, wedstrijden, \dots)
 \end{itemize}
 
 \end{frame}
@@ -234,7 +469,7 @@ NES & Ricoh 2C02 PPU & 52 \\ \hline
 \frametitle{ADSR}
 
 \begin{figure}
-\includegraphics[width=0.5\linewidth]{images/adsr.png}
+\includegraphics[width=0.8\linewidth]{images/adsr.png}
 \end{figure}
 
 \end{frame}
@@ -273,6 +508,19 @@ Raad welk muziekje bij welke computer hoort!
 \begin{figure}
 \includegraphics[width=0.5\linewidth]{images/palette.png}
 \end{figure}
+
+\end{frame}
+
+%----------------------------------------------
+
+\begin{frame}
+\frametitle{Graphics}
+
+\begin{itemize}
+\item 320x200 pixels
+\item 16 kleuren palette
+\item Maximaal 2 of 4 kleuren per 8x8 blok.
+\end{itemize}
 
 \end{frame}
 
