--- a/workshop.tex
+++ b/workshop.tex
@@ -1,3 +1,11 @@
+%
+% Naam: Folkert van Verseveld
+% UvAnetID: 11839341
+% Contact:
+%   @: folkert.van.verseveld@gmail.com
+%   @: folkert.vanverseveld@students.uva.nl
+%
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % LATEX-TEMPLATE PRESENTATIE
 %-------------------------------------------------------------------------------
@@ -16,15 +24,19 @@
 
 \documentclass[aspectratio=43]{uva-inf-presentation}
 \usepackage[dutch]{babel}
-\usepackage{qtree}
+%\usepackage{qtree}
+\usepackage{multicol}
+\usepackage{amssymb}
 \usepackage{listings}
 
 \title{Programmeren in Beperkte Omgevingen}
+% Easter egg: Commodore Business Machines logo
 \course{C=}
 \assignment{Just 4 Fun}
 \assignmenttype{Hacking}
 \authors{Folkert van Verseveld}
 \uvanetids{11839341}
+% XXX Tutor, mentor en docent niet echt van toepassing denk ik?
 \tutor{Teun Mathijssen}
 \mentor{}
 \docent{Robert van Wijk}
@@ -33,13 +45,11 @@
 \begin{document}
 
 \begin{titelframe}
-% De eerste slide is de titelpagina
 \titlepage
 
 \end{titelframe}
 
 \begin{frame}
-% Geeft een inhoudsopgave voor de presentatie
 \frametitle{Inhoudsopgave}
 \tableofcontents
 \end{frame}
@@ -53,7 +63,7 @@
 \section{Introductie}
 % Maak een subsection voor een serie slides met een gedeeld thema
 \section{Programmeeromgeving}
-\section{Opdrachten}
+\section{Intermezzo's en Opdrachten}
 
 \section{Conclusies}
 
@@ -145,14 +155,16 @@
 \frametitle{OXO}
 
 \begin{figure}
-\includegraphics[width=0.75\linewidth]{images/oxo.jpg}
+\includegraphics[width=0.75\linewidth]{images/oxo.png}
 \end{figure}
+% http://www.dcs.warwick.ac.uk/~edsac/
+% eventueel OXO in emulator laten zien.
 
 \end{frame}
 
 %----------------------------------------------
 
-% TODO add e.g. OXO, edsac met specs
+% XXX add edsac geschiedenis & specs?
 
 %----------------------------------------------
 
@@ -163,6 +175,9 @@
 \item Multi-user omgeving
 \item Batch
 \item Reserveren
+\item Onpraktisch
+\item Heel duur: \$100,000+ / \$1,000,000+
+\item Gebruikersonvriendelijk
 \end{itemize}
 
 \end{frame}
@@ -170,13 +185,11 @@
 %----------------------------------------------
 
 \begin{frame}
-\frametitle{Mainframes}
+\frametitle{Mini-mainframes}
 
-\begin{itemize}
-\item Onpraktisch
-\item Heel duur: \$100,000+ / \$1,000,000+
-\item Gebruikersonvriendelijk
-\end{itemize}
+\begin{figure}
+\includegraphics[width=0.45\linewidth]{images/pdp8.jpg}
+\end{figure}
 
 \end{frame}
 
@@ -214,7 +227,74 @@
 \item Mini mainframe
 \item `Goedkoop'
 \item `Gebruikersvriendelijk'
+\item Eerste echte PCs rond 1977-1982
 \end{itemize}
+
+\end{frame}
+
+%----------------------------------------------
+
+\begin{frame}
+\frametitle{Eerste computers}
+
+\begin{figure}
+\includegraphics[width=0.75\linewidth]{images/trs80.jpg}
+\end{figure}
+
+\end{frame}
+
+%----------------------------------------------
+
+\begin{frame}
+\frametitle{Eerste computers}
+
+\begin{figure}
+\includegraphics[width=0.6\linewidth]{images/appleii.jpg}
+\end{figure}
+
+\end{frame}
+
+%----------------------------------------------
+
+\begin{frame}
+\frametitle{Eerste computers}
+
+\begin{figure}
+\includegraphics[width=0.6\linewidth]{images/ibm5150.jpg}
+\end{figure}
+
+\end{frame}
+
+%----------------------------------------------
+
+\begin{frame}
+\frametitle{Eerste computers}
+
+\begin{figure}
+\includegraphics[width=0.6\linewidth]{images/zxspectrum.jpg}
+\end{figure}
+
+\end{frame}
+
+%----------------------------------------------
+
+\begin{frame}
+\frametitle{Eerste Game Consoles}
+
+\begin{figure}
+\includegraphics[width=0.75\linewidth]{images/vcs.jpg}
+\end{figure}
+
+\end{frame}
+
+%----------------------------------------------
+
+\begin{frame}
+\frametitle{Eerste Game Consoles}
+
+\begin{figure}
+\includegraphics[width=0.75\linewidth]{images/nes.jpg}
+\end{figure}
 
 \end{frame}
 
@@ -234,67 +314,17 @@
 %----------------------------------------------
 
 \begin{frame}
-\frametitle{Ontmoet de Succesvolste PC ooit}
-
-\begin{figure}
-\includegraphics[width=0.75\linewidth]{images/desk.jpg}
-\end{figure}
-
-\end{frame}
-
-%----------------------------------------------
-
-\begin{frame}
-\frametitle{De Enige Echte}
-
-\begin{figure}
-\includegraphics[width=0.6\linewidth]{images/c64.jpg}
-\end{figure}
-
-\end{frame}
-
-%----------------------------------------------
-
-\begin{frame}
-\frametitle{Moderne Variant}
-
-\begin{figure}
-\includegraphics[width=0.5\linewidth]{images/boot.png}
-\end{figure}
-
-\end{frame}
-
-%----------------------------------------------
-
-\begin{frame}
-\frametitle{De Specificaties}
-
-\begin{itemize}
-\item Ge\"introduceerd in 1982
-\item 64 kilobytes
-\item MOS 6510 met ~1 MHz kristalklok
-\item 2 joystick poorten
-\item cartridge port (games!), serial I/O, user port
-\item 16 kleuren
-\end{itemize}
-
-\end{frame}
-
-%----------------------------------------------
-
-\begin{frame}
 \frametitle{Ter Vergelijking}
 
 \begin{tabular}{|l|l|l|l|}
-\hline Jaar & Model & Prijs toen & Prijs nu \\
+\hline Jaar & Model & Prijs toen & Prijs nu \\ \hline
 1977 & PET & \$795 & \$3150 \\
 1980 & VIC-20 & \$299.95 & \$874 \\
 1982 & C64 & \$595 & \$1480 \\ \hline
 1977 & Apple ][ & \$1296 & \$5130 \\
 1981 & IBM PC & \$1565 & \$4130 \\
 %IBM PC & 16-640 & Beeper & Ja & \$1565 \\
-%ZX Spec. & 16 & Beeper & Nee & \pound 175 \\ \hline
-1982 & ZX Spec. & \pounds 175 & ??? \\ \hline
+1982 & ZX Spec. & \pounds 175 & \pounds 567 \\ \hline
 1983 & NES & \$179 & \$433 \\ \hline
 \end{tabular}
 
@@ -327,16 +357,60 @@
 %----------------------------------------------
 
 \begin{frame}
-\frametitle{Ter Vergelijking}
+\frametitle{Ontmoet de Succesvolste PC ooit}
 
-\begin{tabular}{|l|l|l|l|l|l|}
-\hline Model & CPU & MHz & Geluid & Voices \\
-C64 & MOS 6510 & 1 & 8-bit SID & 3 \\
-Apple ][ & MOS 6502 & 1 & 1-bit & 0 \\
-IBM PC & i8086 & 4.04 & 1-bit & 0 \\
-ZX Spec. & Z80 & 3.5 & 1-bit & 0 \\ \hline
-NES & Ricoh 2A03 & 1 & 8-bit & 5 \\ \hline
-\end{tabular}
+\begin{figure}
+\includegraphics[width=0.75\linewidth]{images/desk.jpg}
+\end{figure}
+
+\end{frame}
+
+%----------------------------------------------
+
+\begin{frame}
+\frametitle{De Enige Echte}
+
+\begin{figure}
+\includegraphics[width=0.6\linewidth]{images/c64.jpg}
+\end{figure}
+
+\end{frame}
+
+%----------------------------------------------
+
+\begin{frame}
+\frametitle{De Enige Echte}
+
+\begin{figure}
+\includegraphics[width=0.6\linewidth]{images/c64c.jpg}
+\end{figure}
+
+\end{frame}
+
+%----------------------------------------------
+
+\begin{frame}
+\frametitle{Moderne Variant}
+
+\begin{figure}
+\includegraphics[width=0.5\linewidth]{images/boot.png}
+\end{figure}
+
+\end{frame}
+
+%----------------------------------------------
+
+\begin{frame}
+\frametitle{De Specificaties}
+
+\begin{itemize}
+\item Ge\"introduceerd in 1982
+\item 64 kilobytes
+\item MOS 6510 met 1 MHz kristalklok
+\item 2 joystick poorten
+\item cartridge port (games!), serial I/O, user port
+\item 16 kleuren
+\end{itemize}
 
 \end{frame}
 
@@ -346,13 +420,51 @@ NES & Ricoh 2A03 & 1 & 8-bit & 5 \\ \hline
 \frametitle{Ter Vergelijking}
 
 \begin{tabular}{|l|l|l|l|}
-\hline Model & Geluid & Type & Voices \\
-C64 & SID & A/D 8-bit synth. & 3 \\
-Apple ][ & Speaker & 1-bit beeper & 0 \\
-IBM PC & Speaker & 1-bit beepr & 0 \\
-%ZX Spec. & 16K & Beeper & 175 pound & 175 pound \\ \hline
-NES & Z80? & 8-bit digital & 5 \\ \hline
+\hline Model & CPU & MHz \\ \hline
+PET & MOS 6502 & 1 \\ 
+VIC-20 & MOS 6502 & 1 \\ 
+C64 & MOS 6510 & 1 \\ \hline
+Apple ][ & MOS 6502 & 1 \\
+IBM PC & i8086 & 4.04 \\
+ZX Spec. & Z80 & 3.5 \\ \hline
+NES & Ricoh 2A03 & 1 \\ \hline
 \end{tabular}
+
+\end{frame}
+
+%----------------------------------------------
+
+\begin{frame}
+\frametitle{MOS 6502}
+
+\begin{itemize}
+\item Zeer goedkoop en succesvol
+\item 6502, 6510, ricoh 2a03, \dots
+\item PET, VIC-20, C64, NES, \dots
+\item Embedded systems
+\end{itemize}
+
+\end{frame}
+
+%----------------------------------------------
+
+\begin{frame}
+\frametitle{MOS 6502}
+
+\begin{figure}
+\includegraphics[width=\linewidth]{images/terminator.jpg}
+\end{figure}
+
+\end{frame}
+
+%----------------------------------------------
+
+\begin{frame}
+\frametitle{MOS 6502}
+
+\begin{figure}
+\includegraphics[width=0.6\linewidth]{images/bender.jpeg}
+\end{figure}
 
 \end{frame}
 
@@ -363,6 +475,7 @@ NES & Z80? & 8-bit digital & 5 \\ \hline
 
 \begin{tabular}{|l|l|l|}
 \hline Model & Video & Kleuren \\
+VIC-20 & VIC I & 4-16??? \\
 C64 & VIC II & 16 \\
 Apple ][ & ??? & 1-4 \\
 IBM PC & mono of CGA & 1-4 \\
@@ -431,7 +544,7 @@ NES & Ricoh 2C02 PPU & 52 \\ \hline
 \begin{frame}[fragile]{Simpel Programma}
 
 \begin{lstlisting}
-10 PRINT "HELLO VIA"
+10 PRINT "HALLO VIA"
 20 GOTO 10
 \end{lstlisting}
 
@@ -451,6 +564,113 @@ NES & Ricoh 2C02 PPU & 52 \\ \hline
 
 %----------------------------------------------
 
+\begin{frame}[fragile]{Simpel Programma}
+
+\begin{lstlisting}
+lda #$08
+sta $400
+lda #$05
+sta $401
+lda #$19
+sta $402
+rts
+\end{lstlisting}
+
+\end{frame}
+
+%----------------------------------------------
+
+\begin{frame}{Simpel Programma}
+
+\begin{itemize}
+\item Ga naar: https://skilldrick.github.io/easy6502/
+\item Bekijk de voorbeelden.
+\item Probeer zelf een programma te maken!
+\end{itemize}
+
+
+\end{frame}
+
+%----------------------------------------------
+
+\begin{frame}
+\frametitle{Audio}
+
+\begin{itemize}
+\item Analoog of Digitaal
+\end{itemize}
+
+\end{frame}
+
+%----------------------------------------------
+
+\begin{frame}
+\frametitle{Analoog Audio}
+
+\begin{itemize}
+\item Niet-elektronisch
+\item Visualisatie met Oscilloscoop
+\end{itemize}
+
+\end{frame}
+
+%----------------------------------------------
+
+\begin{frame}
+\frametitle{Digitaal Audio}
+
+\begin{itemize}
+\item Benadering van Analoog
+\item Stapsgewijs
+\item Duidelijk zichtbaar op oude PCs
+\end{itemize}
+
+\end{frame}
+
+%----------------------------------------------
+
+\begin{frame}
+\frametitle{Digitaal Audio}
+
+\begin{figure}
+\includegraphics[width=0.9\linewidth]{images/rc3nes.png}
+\end{figure}
+
+\end{frame}
+
+%----------------------------------------------
+
+\begin{frame}
+\frametitle{C64: SID chip}
+
+\begin{itemize}
+\item 's werelds eerste audio synthesizer
+\item Analoog \emph{en} Digitaal
+\item Verschillende onderscheidingen
+\end{itemize}
+
+\end{frame}
+
+%----------------------------------------------
+
+\begin{frame}
+\frametitle{Ter Vergelijking}
+
+\begin{tabular}{|l|l|l|l|}
+\hline Model & Geluid & Type & Voices \\ \hline
+PET & Speaker & 1-bit beeper & 0 \\
+%VIC-20 & Speaker? & 1-bit beeper & 0 \\
+C64 & SID & A/D 8-bit synthesizer & 3 \\ \hline
+Apple ][ & Speaker & 1-bit beeper & 0 \\
+IBM PC & Speaker & 1-bit beeper & 0 \\
+%ZX Spec. & 16K & Beeper & 175 pound & 175 pound \\ \hline
+NES & custom & 8-bit digital & 5 \\ \hline
+\end{tabular}
+
+\end{frame}
+
+%----------------------------------------------
+
 \begin{frame}
 \frametitle{Audio}
 
@@ -460,8 +680,6 @@ NES & Ricoh 2C02 PPU & 52 \\ \hline
 \end{itemize}
 
 \end{frame}
-
-%https://musictechstudent.co.uk/music-production-glossary/adsr/
 
 %----------------------------------------------
 
@@ -495,8 +713,21 @@ NES & Ricoh 2C02 PPU & 52 \\ \hline
 \frametitle{Intermezzo}
 
 \begin{block}{Muziek}
-Raad welk muziekje bij welke computer hoort!
+Raad welk muziekje bij welke computer/console hoort!
 \end{block}
+
+\end{frame}
+
+%----------------------------------------------
+
+\begin{frame}
+\frametitle{Intermezzo}
+
+\begin{itemize}
+\item IBM PC
+\item C64
+\item NES
+\end{itemize}
 
 \end{frame}
 
@@ -647,11 +878,28 @@ Source: Duce
 \frametitle{Revision}
 
 \begin{itemize}
-\item sinds 2011
-\item ong. 700 bezoekers
-\item grote bedrijven bieden banen aan!
-\item seminars
+\item Sinds 2011 (daarvoor: Breakpoint)
+\item Ong. 700 bezoekers
+\item Grote bedrijven bieden banen aan!
+\item Seminars
 \item 30+ wedstrijden (demo, gfx, fotografie, \dots)
+\end{itemize}
+
+\end{frame}
+
+%----------------------------------------------
+
+\begin{frame}
+\frametitle{HCC}
+
+\begin{itemize}
+\item Nederlandse Hobby Computer Club
+\item 27 april 1977
+\item Diverse interessegroepen
+\item Elke twee maanden in Maarssen
+\item Retro (8/16 bit) computers welkom
+\item Ultimate II+
+\item Swappen
 \end{itemize}
 
 \end{frame}
@@ -668,32 +916,78 @@ Source: Duce
 
 \end{frame}
 
-%----------------------------------------------
-%\begin{frame}
-%
-%\begin{block}{Typen van binaire bomen}
-%\begin{itemize}
-%\item Geworteld
-%\item Volledig
-%\item Perfect
-%\item Compleet
-%%\item[Geworteld:] wortel en elke knoop niet meer dan 2 kinderen
-%%\item[Volledig:] elke knoop heeft \'of 0 \'of 2 kinderen
-%%\item[Perfect:] elke knoop heeft precies 2 kinderen of 2 bladeren
-%%\item[Compleet:] elke level behalve laatste is kompleet gevuld
-%\end{itemize}
-%\end{block}
-%
-%\end{frame}
+%------------------------------------------------
+
+\begin{frame}
+\frametitle{Vervolg}
+
+\begin{itemize}
+\item Demoscene
+\item Oldskool computers
+\item Enorme uitdaging
+\end{itemize}
+
+\end{frame}
 
 %------------------------------------------------
 
 \begin{frame}
 \frametitle{Conclusies}
 
-%\begin{figure}
-%\includegraphics[width=0.8\linewidth]{images/bigocheatsheet.png}
-%\end{figure}
+\begin{itemize}
+\item PC Geschiedenis
+\item Hacken op C64
+\item Programmeren tot het uiterste
+\item Programmeerwedstrijden
+\end{itemize}
+
+\end{frame}
+
+%------------------------------------------------
+
+\begin{frame}
+\frametitle{Met dank aan}
+
+\begin{itemize}
+\item Lezingencommissie
+\item VIA
+\item CCC
+\item HCC
+\item Hobbyisten en C64 fans
+\item Scene
+\end{itemize}
+
+\end{frame}
+
+%------------------------------------------------
+
+\begin{frame}
+\frametitle{Met dank aan}
+
+\begin{multicols}{2}
+\begin{itemize}
+\item Abyss Connection
+\item Algotech
+\item Atlantis
+\item Bonzai
+\item Booze Design
+\item Camelot
+\item Censor
+\item Fairlight
+\item Fossil
+\item House Designs
+\item Maniacs of Noise
+\item Offence
+\item Onslaught
+\item Oxyron
+\item Padua
+\item Panda Design
+\item Poobrain
+\item Prosonix
+\item Triad
+\end{itemize}
+\end{multicols}
+
 \end{frame}
 
 %------------------------------------------------
@@ -701,6 +995,30 @@ Source: Duce
 \begin{frame}
 \frametitle{Bedankt voor jullie aandacht}
 \Large{\centerline{Zijn er nog vragen?}}
+\end{frame}
+
+%------------------------------------------------
+
+\begin{frame}
+\frametitle{Bronvermeldingen}
+
+\begin{multicols}{2}
+\begin{itemize}
+\item 2017.revision-party.net
+\item c64-wiki.com
+\item codebase64.org
+\item commodore.hcc.nl
+\item dcs.warwick.ac.uk
+\item demoparty.net
+\item id.scene.org
+\item ieee.org
+\item pouet.net
+\item scs-trc.net
+\item sta.c64.org
+\item wikipedia.org
+\end{itemize}
+\end{multicols}
+
 \end{frame}
 
 \end{document}
