schema aangepast, no trailing whitespace
vergelijkingstabel heeft nu prijs omgerekend en wat je er vandaag voor
zou betalen als je ze bijv. op rommelmarkt koopt. informatie over tapes,
floppies en data-opslag van toen.

klein beetje uitleg bij assembly voorbeeld, maar misschien is het beter
om dit weg te laten.

informatie over HCC en koopadvies van C64 en meer demogroeps toegevoegd.

--- a/todo
+++ b/todo
@@ -1,18 +1,13 @@
 
-Wed Nov 29 12:45:47 CET 2017
+Thu Nov 30 11:16:31 CET 2017
 
 belangrijk:
-  punten voor vandaag en morgen
-  op lemon64 workshop aankondigen en vragen voor feedback/tips e.d.
-  bij HCC vragen om stekker/converter en workshop tips e.d.
+  overleg met boaz 15:00 - 16:00 bij de kelder
   fieserwolf mailen!
-  op github een workshop project maken!
+  *voor* de vakantie
+    met groep mensen voorproefje doen
 
 vandaag:
-  bij DWL
-    workshop aankondigen
-
-morgen:
   met boaz workshop bespreken
     globaal schema doornemen
     kijken naar opdrachten
@@ -21,6 +16,17 @@ morgen:
       eventueel 2 reserveren en kijken naar aantal aanmeldingen?
       maximumquotum stellen?
 
+belangrijk:
+  bij HCC vragen om stekker/converter en workshop tips e.d.
+  op github een workshop project maken!
+
 voor de vakantie:
   met kleine groep een voorproefje doen
     voorbeelden maken!
+
+al gedaan:
+
+belangrijk:
+  op lemon64 workshop aankondigen en vragen voor feedback/tips e.d.
+  bij DWL
+    workshop aankondigen
