Split groups and thanks into separate file

--- a/workshop.tex
+++ b/workshop.tex
@@ -1175,54 +1175,7 @@ Source: Duce
 
 %------------------------------------------------
 
-\begin{frame}
-\frametitle{Met dank aan}
-
-\begin{itemize}
-\item Lezingencommissie
-\item VIA
-\item CCC
-\item HCC, lemon64, csdb, VICE
-\item Hobbyisten en C64 fans
-\item Scene
-\end{itemize}
-
-\end{frame}
-
-%------------------------------------------------
-
-\begin{frame}
-\frametitle{Met dank aan}
-
-\begin{multicols}{3}
-\begin{itemize}
-\item Abyss Connection
-\item Algotech
-\item Atlantis
-\item Bonzai
-\item Booze Design
-\item Byte Rapers
-\item Camelot
-\item Censor
-\item Fairlight
-\item Fossil
-\item Hoaxers
-\item House Designs
-\item Laxity
-\item LFT
-\item Maniacs of Noise
-\item Offence
-\item Onslaught
-\item Oxyron
-\item Padua
-\item Panda Design
-\item Poobrain
-\item Prosonix
-\item Triad
-\end{itemize}
-\end{multicols}
-
-\end{frame}
+\include{thanks}
 
 %------------------------------------------------
 
