make: auto setup images
All images are automatically fetched from the web making sure that
cloning the repo will work properly. Some images have been changed and
all known authors are documented. Images whose authors are unknown are
documented by linking to the source and complying to fair use policy.

--- a/thanks.tex
+++ b/thanks.tex
@@ -1,6 +1,53 @@
 %------------------------------------------------
 
 \begin{frame}
+\frametitle{Bronvermeldingen}
+
+\begin{multicols}{2}
+\begin{itemize}
+\item archive.org
+\item bolo.ch
+\item c64-wiki.com
+\item codebase64.org
+\item commodore.hcc.nl
+\item csdb.dk
+\item dcs.warwick.ac.uk
+\item demoparty.net
+\item derbian.webs.com
+\item devil.iki.fi
+\item freeinfosociety.com
+\item granishmusicproduction.com
+\item history-computer.com
+\item id.scene.org
+\item ieee.org
+\end{itemize}
+\end{multicols}
+
+\end{frame}
+
+%------------------------------------------------
+
+\begin{frame}
+\frametitle{Bronvermeldingen}
+
+\begin{multicols}{2}
+\begin{itemize}
+\item musictechstudent.co.uk
+\item oldcomputers.net
+\item pagetable.com
+\item pouet.net
+\item revision-party.net
+\item scs-trc.net
+\item sta.c64.org
+\item vice.sourceforge.net
+\item wikipedia.org
+\end{itemize}
+\end{multicols}
+
+\end{frame}
+%------------------------------------------------
+
+\begin{frame}
 \frametitle{Met dank aan}
 
 \begin{itemize}
@@ -10,6 +57,9 @@
 \item HCC, lemon64, csdb, VICE
 \item Hobbyisten en C64 fans
 \item Scene
+\item \'Ecole Polytechnique F\'ed\'erale de Lausanne
+% trs80 image:
+\item Mus\'ee Bolo
 \end{itemize}
 
 \end{frame}
@@ -17,7 +67,36 @@
 %------------------------------------------------
 
 \begin{frame}
-\frametitle{Met dank aan}
+\frametitle{Met dank aan - HCC en Sceners}
+
+\begin{itemize}
+\item Duncan
+\item fieserWolf
+\item Fred Bos
+\item Ron van Schaik
+\end{itemize}
+
+\end{frame}
+
+%------------------------------------------------
+
+\begin{frame}
+\frametitle{Met dank aan - gfx}
+
+\begin{itemize}
+\item Bill Bertram
+\item Jozef Galanda
+% trs80 image author:
+\item Rama
+\item Ruben de Rijcke
+\end{itemize}
+
+\end{frame}
+
+%------------------------------------------------
+
+\begin{frame}
+\frametitle{Met dank aan de Sceners}
 
 \begin{multicols}{3}
 \begin{itemize}
@@ -49,7 +128,7 @@
 %------------------------------------------------
 
 \begin{frame}
-\frametitle{Met dank aan}
+\frametitle{Met dank aan de Sceners}
 
 \begin{multicols}{3}
 \begin{itemize}
@@ -85,7 +164,7 @@
 %------------------------------------------------
 
 \begin{frame}
-\frametitle{Met dank aan}
+\frametitle{Met dank aan de Sceners}
 
 \begin{multicols}{3}
 \begin{itemize}
@@ -116,7 +195,7 @@
 %------------------------------------------------
 
 \begin{frame}
-\frametitle{Met dank aan}
+\frametitle{Met dank aan de Sceners}
 
 \begin{multicols}{3}
 \begin{itemize}
@@ -153,7 +232,7 @@
 %------------------------------------------------
 
 \begin{frame}
-\frametitle{Met dank aan}
+\frametitle{Met dank aan de Sceners}
 
 \begin{multicols}{3}
 \begin{itemize}
