--- a/workshop.tex
+++ b/workshop.tex
@@ -155,7 +155,7 @@
 \frametitle{OXO}
 
 \begin{figure}
-\includegraphics[width=0.75\linewidth]{images/oxo.png}
+\includegraphics[width=0.75\linewidth]{images/oxo.jpg}
 \end{figure}
 % http://www.dcs.warwick.ac.uk/~edsac/
 % eventueel OXO in emulator laten zien.
@@ -925,15 +925,15 @@ NES & Ricoh 2C02 PPU & 52 \\ \hline
 \end{frame}
 
 %----------------------------------------------
-
-\begin{frame}
-\frametitle{Graphics}
-
-\begin{figure}
-\includegraphics[width=0.5\linewidth]{images/gfx.png}
-\end{figure}
-
-\end{frame}
+%
+%\begin{frame}
+%\frametitle{Graphics}
+%
+%\begin{figure}
+%\includegraphics[width=0.5\linewidth]{images/gfx.png}
+%\end{figure}
+%
+%\end{frame}
 
 %----------------------------------------------
 
@@ -1125,51 +1125,6 @@ Source: Duce
 \item Programmeren tot het uiterste
 \item Programmeerwedstrijden
 \end{itemize}
-
-\end{frame}
-
-%------------------------------------------------
-
-\begin{frame}
-\frametitle{Bronvermeldingen}
-
-\begin{multicols}{2}
-\begin{itemize}
-\item archive.org
-\item c64-wiki.com
-\item codebase64.org
-\item commodore.hcc.nl
-\item csdb.dk
-\item dcs.warwick.ac.uk
-\item demoparty.net
-\item derbian.webs.com
-\item devil.iki.fi
-\item freeinfosociety.com
-\item id.scene.org
-\item ieee.org
-\end{itemize}
-\end{multicols}
-
-\end{frame}
-
-%------------------------------------------------
-
-\begin{frame}
-\frametitle{Bronvermeldingen}
-
-\begin{multicols}{2}
-\begin{itemize}
-\item musictechstudent.co.uk
-\item oldcomputers.net
-\item pagetable.com
-\item pouet.net
-\item revision-party.net
-\item scs-trc.net
-\item sta.c64.org
-\item vice.sourceforge.net
-\item wikipedia.org
-\end{itemize}
-\end{multicols}
 
 \end{frame}
 
