Audio section (except sid hacking) completed
schema van vertellen over muziek ook erbij gepleurd.
introductie, kern en slot van audio in slides gezet.
een aantal voorbeelden leggen de verschillende audiosystemen uit.
de SID bugs moeten nog verder uitgewerkt worden.

--- a/thanks.tex
+++ b/thanks.tex
@@ -15,6 +15,7 @@
 \item demoparty.net
 \item derbian.webs.com
 \item devil.iki.fi
+\item famitracker.com
 \item freeinfosociety.com
 \item granishmusicproduction.com
 \item history-computer.com
@@ -86,6 +87,8 @@
 \begin{itemize}
 \item Bill Bertram
 \item Jozef Galanda
+% waveforms
+\item Omegatron
 % trs80 image author:
 \item Rama
 \item Ruben de Rijcke
