Programmeeropdrachten en uitwerkingen
Een verzameling van simpele opdrachten gemaakt en de uitwerkingen erbij
gezet. Als laatste de volledige naam van Fred Bos in de credits gezet.

--- a/thanks.tex
+++ b/thanks.tex
@@ -72,8 +72,8 @@
 \begin{itemize}
 \item Duncan
 \item fieserWolf
-\item Fred Bos
 \item Ron van Schaik
+\item Wilfred Bos
 \end{itemize}
 
 \end{frame}
