Added exercises hints, PET, updated sound info

--- a/answers.tex
+++ b/answers.tex
@@ -47,6 +47,8 @@ Als de cursor voorbij de laatste regel gaat zal het hele venster \'e\'en regel n
 
 \solution \verb:PRINT3*3*3*3:. We hadden ook \^{} kunnen gebruiken: \verb:PRINT3^4:.
 
+\section{Programmeren in BASIC}
+
 \solution De tekst \verb:COMMODORE 64: zal nu continu achter elkaar geprint worden in plaats van \'e\'en per regel.
 
 \solution Met \verb:LIST: kan men een \emph{listing} geven van alle broncode. \verb:LIST10: geeft alle code van regel 10.
