--- a/workshop.tex
+++ b/workshop.tex
@@ -239,6 +239,17 @@
 \frametitle{Eerste computers}
 
 \begin{figure}
+\includegraphics[width=0.6\linewidth]{images/appleii.jpg}
+\end{figure}
+
+\end{frame}
+
+%----------------------------------------------
+
+\begin{frame}
+\frametitle{Eerste computers}
+
+\begin{figure}
 \includegraphics[width=0.75\linewidth]{images/trs80.jpg}
 \end{figure}
 
@@ -250,7 +261,7 @@
 \frametitle{Eerste computers}
 
 \begin{figure}
-\includegraphics[width=0.6\linewidth]{images/appleii.jpg}
+\includegraphics[width=0.6\linewidth]{images/pet.jpg}
 \end{figure}
 
 \end{frame}
@@ -836,8 +847,8 @@ rts
 
 \begin{tabular}{|l|l|l|l|}
 \hline Model & Geluid & Type & Voices \\ \hline
-PET & Speaker & 1-bit beeper & 0 \\
-%VIC-20 & Speaker? & 1-bit beeper & 0 \\
+PET & CPU PIO & 1-bit beeper & 0 \\
+VIC-20 & VIC I & 8-bit digital & 4 \\
 C64 & SID & A/D 8-bit synthesizer & 3 \\ \hline
 Apple ][ & Speaker & 1-bit beeper & 0 \\
 IBM PC & Speaker & 1-bit beeper & 0 \\
@@ -942,6 +953,7 @@ Raad welk muziekje bij welke computer/console hoort!
 
 \begin{tabular}{|l|l|l|}
 \hline Model & Video & Kleuren \\
+PET & ??? & 1 \\
 VIC-20 & VIC I & 4-16??? \\
 C64 & VIC II & 16 \\
 Apple ][ & ??? & 1-4 \\
